# wolf3d-haskell

./: .travis.yml  Dockerfile  LICENSE  README.md  cabal.config  stack.yaml  wolf3d.cabal
.github/workflows/: build.yml
app/: Main.hs
app-debug/: Main.hs
src/: Lib.hs  Wolf3D.hs
src/SimEngine/: Engine.hs  Geom.hs
src/Wolf3D/: Animation.hs  Data.hs  DataHelpers.hs  Display.hs  Engine.hs  Environment.hs  Geom.hs  Hero.hs  Input.hs  Items.hs  Loader.hs  Main.hs  Player.hs  Runner.hs  SDLUtils.hs  Sim.hs  Types.hs  UI.hs  Utils.hs  Wolf3DSim.hs  World.hs  WorldData.hs
src/Wolf3D/Debug/: Data.hs  Display.hs  Dummy.hs
src/Wolf3D/Display/: Data.hs  Hud.hs  MiniMap.hs  Ray.hs  Utils.hs
test/: Spec.hs
test/SimEngine/: EngineSpec.hs  GeomSpec.hs
test/Wolf3D/: DisplaySpec.hs  EngineSpec.hs  GeomSpec.hs  HeroSpec.hs  RunnerSpec.hs  SimSpec.hs  SpecHelp.hs  WorldSpec.hs
test/Wolf3D/Display/: RaySpec.hs
