name:                wolf3d
version:             0.0.0.4
-- synopsis:
-- description:
homepage:            https://github.com/danielholmes/wolf3d#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Holmes
maintainer:          daniel@danielholmes.org
copyright:           2018 Daniel Holmes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wolf3D.Geom
                     , Wolf3D.Main
                     , Wolf3D.Engine
                     , Wolf3D.Sim
                     , Wolf3D.Runner
                     , Wolf3D.Display
                     , Wolf3D.Display.Data
                     , Wolf3D.Display.Ray
                     , Wolf3D.Display.Hud
                     , Wolf3D.Display.Utils
                     , Wolf3D.Display.MiniMap
                     , Wolf3D.UI
                     , Wolf3D.SDLUtils
                     , Wolf3D.Debug.Dummy
                     , Wolf3D.Debug.Display
                     , Wolf3D.Debug.Data
                     , Wolf3D.Loader
                     , Wolf3D.Utils
                     , Wolf3D.Animation
  other-modules:       Wolf3D.Input
  build-depends:       base >= 4.7 && < 5
                     , sdl2 >= 2.3.0 && < 3
                     , sdl2-image >= 2.0.0 && < 3
                     , time >= 1.6.0.1 && < 2
                     , text >= 1.2.2.2 && < 2
                     , extra >= 1.5.3 && < 2
                     , monad-loops >= 0.4.3 && < 1
                     , StateVar >= 1.1.0.4 && < 2
                     , AC-Vector >= 1.2.2 && < 2
                     , containers >= 0.5.10.2 && < 1
                     , sdl2-ttf >= 2.0.1 && < 3
                     , stopwatch >= 0.1.0.4 && < 1
                     , clock >= 0.7.2 && < 1
                     , array >= 0.5.4.0 && < 1
  default-language:    Haskell2010

--executable wolf3d
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , wolf3d
--                     , AC-Vector >= 1.2.2 && < 2
--  default-language:    Haskell2010

executable wolf3d-debug
  hs-source-dirs:      app-debug
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wolf3d
                     , AC-Vector >= 1.2.2 && < 2
  default-language:    Haskell2010

test-suite wolf3d-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wolf3d
                     , hspec >= 2.4.4 && < 3
                     , time >= 1.6.0.1 && < 2
                     , AC-Vector >= 1.2.2 && < 2
  other-modules:       Wolf3D.SpecHelp
                     , Wolf3D.GeomSpec
                     , Wolf3D.SimSpec
                     , Wolf3D.RunnerSpec
                     , Wolf3D.EngineSpec
                     , Wolf3D.Display.RaySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danielholmes/wolf3d-haskell
